manifests/base/retrieve-and-extract-github-data/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghtorrent-api-deployment
  labels:
    app: ghtorrent-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghtorrent-api
  template:
    metadata:
      labels:
        app: ghtorrent-api
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: ghtorrent-api-container
          image: harbor.th1enlm02.live/production/retrieve-and-extract-github-data:79eecab-1749894287 # {"$imagepolicy": "production:ghtorrent-api-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 4567
          resources:
            requests:
              cpu: "20m"
              memory: "130Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          volumeMounts:
            - name: ghtorrent-storage
              mountPath: /app/repos
      volumes:
        - name: ghtorrent-storage
          persistentVolumeClaim:
            claimName: ghtorrent-api-pvc
